--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,14 +21,15 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
-      displayName: Build an image
+      displayName: Build and push an image
       inputs:
         containerRegistry: 'Docker Hub'
         repository: 'karlosarr/azagent'
         command: 'buildAndPush'
         Dockerfile: 'dockeragent/Dockerfile'
-        buildContext: 'latest'
-        tags: '$(tag)'
+        tags: |
+          $(tag)
+          latest
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(system.defaultworkingdirectory)/k8s'
